add firebase to gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,12 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.jakewharton:butterknife:8.6.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    //UI helper
+    compile 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+
+    //firebase dependency
+    compile 'com.google.firebase:firebase-core:10.2.1'
 }
