--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,24 +26,25 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     //UI helper
-    compile 'com.jakewharton:butterknife:8.6.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 
     //firebase dependency
+    //firebase auth
+
+
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.jakewharton:butterknife:8.6.0'
     compile 'com.google.firebase:firebase-core:11.0.0'
     compile 'com.google.firebase:firebase-database:11.0.0'
-    //firebase auth
     compile 'com.google.firebase:firebase-auth:11.0.0'
     compile 'com.google.android.gms:play-services-auth:11.0.0'
-
     compile 'com.google.firebase:firebase-messaging:11.0.0'
     compile 'com.firebaseui:firebase-ui:2.0.1'
-
+    compile 'com.android.support:design:25.3.1'
+    testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
